# FlujoC-

./: ArgumentosDeLineaDeComandosYFlujos.cpp  CMakeLists.txt  FlujosDeArchivo.cpp  FormatoYManipuladoresDeFlujo.cpp  LecturaEscrituraFlujosEstandar.cpp  README.md  UsoDeStringstream.cpp
