cmake_minimum_required(VERSION 3.29)
project(FlujoCmasmas)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio1
    LecturaEscrituraFlujosEstandar.cpp)

add_executable(Ejercicio2
        FlujosDeArchivo.cpp)

add_executable(Ejercicio3
        FormatoYManipuladoresDeFlujo.cpp)

add_executable(Ejercicio4
        UsoDeStringstream.cpp)

add_executable(Ejercicio5
        ArgumentosDeLineaDeComandosYFlujos.cpp)